--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="logo">
-        COPENHAGEN FASHION WEEK <span>powered by Zalando</span>
+        Bandung Fashion Week <span>powered by Ferry Sunarto</span>
       </div>
       <div class="header-right">
         <div class="event-date">AW26 / 27 – 30 January 2026</div>
@@ -20,10 +20,17 @@
 
     <div class="hero-container">
       <h1>
-        Copenhagen<br />
+        Bandung<br />
         Fashion<br />
         Week
       </h1>
+      <div class="sponsor">
+        <div class="poweredby">POWERED BY</div>
+        <img
+          src="Asset/Img/ferry_sunarto_transparent.webp"
+          alt="Ferry Sunarto"
+        />
+      </div>
     </div>
     <section class="video-section">
       <video autoplay muted loop playsinline>
@@ -32,8 +39,111 @@
       </video>
     </section>
     <main class="main-content">
-      <h2>Introducing key Nordic talent</h2>
-      <p>This is where the rest of your page content goes...</p>
+      <!-- SCHEDULE TEASER -->
+      <section class="section">
+        <h2>Schedule Highlights</h2>
+        <p class="by">Quick filters to browse the week</p>
+        <div class="chips">
+          <div class="chip chip--on">All</div>
+          <div class="chip">Runway</div>
+          <div class="chip">Presentation</div>
+          <div class="chip">Digital</div>
+        </div>
+        <div class="cards">
+          <a class="card" href="#">
+            <div class="time">Mon · 10:00</div>
+            <div class="ttl">Opening Show — Bandung Collective</div>
+            <div class="meta">Braga Theater · RSVP</div>
+          </a>
+          <a class="card" href="#">
+            <div class="time">Tue · 14:30</div>
+            <div class="ttl">Nusantara Couture Capsule</div>
+            <div class="meta">Gedung Merdeka · Invite Only</div>
+          </a>
+          <a class="card" href="#">
+            <div class="time">Wed · 19:00</div>
+            <div class="ttl">Night Runway by Riverside</div>
+            <div class="meta">Cikapundung · Public</div>
+          </a>
+        </div>
+      </section>
+
+      <!-- OUR SPECIAL GUEST (6-video collage) -->
+      <section class="section">
+        <h2>Our Special Guest</h2>
+        <p class="by">
+          International & local icons gracing Bandung this season
+        </p>
+
+        <div class="mosaic">
+          <div class="mosaic-tile">
+            <video
+              id="guest-video1"
+              src="Asset/Video/video1.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+          <div class="mosaic-tile">
+            <video
+              id="guest-video2"
+              src="Asset/Video/video3.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+          <div class="mosaic-tile">
+            <video
+              id="guest-video3"
+              src="Asset/Video/video4.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+          <div class="mosaic-tile">
+            <video
+              id="guest-video4"
+              src="Asset/Video/video3.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+          <div class="mosaic-tile">
+            <video
+              id="guest-video5"
+              src="Asset/Video/video4.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+          <div class="mosaic-tile">
+            <video
+              id="guest-video6"
+              src="Asset/Video/video1.mp4"
+              autoplay
+              muted
+              loop
+              playsinline
+              preload="metadata"
+            ></video>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div class="dropdown-menu" id="dropdown-menu">
