--- a/index.html
+++ b/index.html
@@ -1,184 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copenhagen Fashion Week</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        Bandung Fashion Week <span>powered by Ferry Sunarto</span>
-      </div>
-      <div class="header-right">
-        <div class="event-date">AW26 / 27 – 30 January 2026</div>
-        <a href="#" class="menu-button">Menu</a>
-      </div>
-    </header>
-    <div class="page-overlay" id="page-overlay"></div>
 
-    <div class="hero-container">
-      <h1>
-        Bandung<br />
-        Fashion<br />
-        Week
-      </h1>
-      <div class="sponsor">
-        <div class="poweredby">POWERED BY</div>
-        <img
-          src="Asset/Img/ferry_sunarto_transparent.webp"
-          alt="Ferry Sunarto"
-        />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bandung Fashion Week</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      Bandung Fashion Week <span>powered by Ferry Sunarto</span>
     </div>
-    <section class="video-section">
-      <video autoplay muted loop playsinline>
-        <source src="Asset/Video/contoh2.mp4" type="video/mp4" />
-        Browser Anda tidak mendukung tag video.
-      </video>
+    <div class="header-right">
+      <div class="event-date">AW26 / 27 – 30 January 2026</div>
+      <a href="#" class="menu-button">Menu</a>
+    </div>
+  </header>
+  <div class="page-overlay" id="page-overlay"></div>
+
+  <div class="hero-container">
+    <h1>
+      Bandung<br />
+      Fashion<br />
+      Week
+    </h1>
+    <div class="sponsor">
+      <div class="poweredby">POWERED BY</div>
+      <img src="Asset/Img/ferry_sunarto_transparent.webp" alt="Ferry Sunarto" />
+    </div>
+  </div>
+  <section class="video-section">
+    <video autoplay muted loop playsinline>
+      <source src="Asset/Video/video4.mp4" type="video/mp4" />
+      Browser Anda tidak mendukung tag video.
+    </video>
+  </section>
+  <main class="main-content">
+    <!-- SCHEDULE TEASER -->
+    <section class="section">
+      <h2>Schedule Highlights</h2>
+      <p class="by">Quick filters to browse the week</p>
+      <div class="chips">
+        <div class="chip chip--on" data-filter="all">All</div>
+        <div class="chip" data-filter="runway">Runway</div>
+        <div class="chip" data-filter="presentation">Presentation</div>
+        <div class="chip" data-filter="digital">Digital</div>
+      </div>
+      <div class="cards">
+        <a class="card" data-category="runway" href="#">
+          <div class="time">Mon · 10:00</div>
+          <div class="ttl">Opening Show — Bandung Collective</div>
+          <div class="meta">Braga Theater · RSVP</div>
+        </a>
+        <a class="card" data-category="presentation" href="#">
+          <div class="time">Tue · 14:30</div>
+          <div class="ttl">Nusantara Couture Capsule</div>
+          <div class="meta">Gedung Merdeka · Invite Only</div>
+        </a>
+        <a class="card" data-category="runway" href="#">
+          <div class="time">Wed · 19:00</div>
+          <div class="ttl">Night Runway by Riverside</div>
+          <div class="meta">Cikapundung · Public</div>
+        </a>
+        <a class="card" data-category="digital" href="#">
+          <div class="time">Thu · 11:00</div>
+          <div class="ttl">Digital Showcase: Future Fabrics</div>
+          <div class="meta">Online Stream · Public</div>
+        </a>
+      </div>
     </section>
-    <main class="main-content">
-      <!-- SCHEDULE TEASER -->
-      <section class="section">
-        <h2>Schedule Highlights</h2>
-        <p class="by">Quick filters to browse the week</p>
-        <div class="chips">
-          <div class="chip chip--on">All</div>
-          <div class="chip">Runway</div>
-          <div class="chip">Presentation</div>
-          <div class="chip">Digital</div>
-        </div>
-        <div class="cards">
-          <a class="card" href="#">
-            <div class="time">Mon · 10:00</div>
-            <div class="ttl">Opening Show — Bandung Collective</div>
-            <div class="meta">Braga Theater · RSVP</div>
-          </a>
-          <a class="card" href="#">
-            <div class="time">Tue · 14:30</div>
-            <div class="ttl">Nusantara Couture Capsule</div>
-            <div class="meta">Gedung Merdeka · Invite Only</div>
-          </a>
-          <a class="card" href="#">
-            <div class="time">Wed · 19:00</div>
-            <div class="ttl">Night Runway by Riverside</div>
-            <div class="meta">Cikapundung · Public</div>
-          </a>
-        </div>
-      </section>
 
-      <!-- OUR SPECIAL GUEST (6-video collage) -->
-      <section class="section">
-        <h2>Our Special Guest</h2>
-        <p class="by">
-          International & local icons gracing Bandung this season
-        </p>
+    <!-- OUR SPECIAL GUEST (6-video collage) -->
+    <section class="section">
+      <h2>Our Special Guest</h2>
+      <p class="by">
+        International & local icons gracing Bandung this season
+      </p>
 
-        <div class="mosaic">
-          <div class="mosaic-tile">
-            <video
-              id="guest-video1"
-              src="Asset/Video/video1.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video2"
-              src="Asset/Video/video3.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video3"
-              src="Asset/Video/video4.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video4"
-              src="Asset/Video/video3.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video5"
-              src="Asset/Video/video4.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video6"
-              src="Asset/Video/video1.webm"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
-          </div>
+      <div class="mosaic">
+        <div class="mosaic-tile">
+          <video id="guest-video1" src="Asset/Video/video1.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
         </div>
-      </section>
-    </main>
-
-    <div class="dropdown-menu" id="dropdown-menu">
-      <div class="dropdown-content">
-        <nav class="main-nav">
-          <ul>
-            <li><a href="#">BRANDS</a></li>
-            <li>
-              <a href="#"><span>&#9662;</span> APPLICATIONS</a>
-            </li>
-            <li>
-              <a href="#"><span>&#9662;</span> SUSTAINABILITY</a>
-            </li>
-            <li>
-              <a href="#"><span>&#9662;</span> CPHFW NEWTALENT</a>
-            </li>
-            <li><a href="#">NEWS</a></li>
-          </ul>
-        </nav>
-        <div class="secondary-nav">
-          <ul>
-            <li><a href="#">Image Bank</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Partners</a></li>
-          </ul>
-          <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">YouTube</a></li>
-            <li><a href="#">Spotify</a></li>
-          </ul>
+        <div class="mosaic-tile">
+          <video id="guest-video2" src="Asset/Video/video3.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
+        </div>
+        <div class="mosaic-tile">
+          <video id="guest-video3" src="Asset/Video/video4.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
+        </div>
+        <div class="mosaic-tile">
+          <video id="guest-video4" src="Asset/Video/video3.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
+        </div>
+        <div class="mosaic-tile">
+          <video id="guest-video5" src="Asset/Video/video4.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
+        </div>
+        <div class="mosaic-tile">
+          <video id="guest-video6" src="Asset/Video/video1.mp4" autoplay muted loop playsinline
+            preload="metadata"></video>
         </div>
       </div>
+    </section>
+
+    <section class="section partners-section">
+      <h2>
+        Bandung Fashion Week is made possible through its curated and
+        dedicated partners
+      </h2>
+
+      <div class="slider">
+        <div class="scrolling-row">
+          <div class="partner-logo">
+            <img src="Asset/Img/Group 13.png" alt="Partner Logo 1" />
+          </div>
+          <div class="partner-logo">
+            <img src="Asset/Img/Group 13.png" alt="Partner Logo 2" />
+          </div>
+          <div class="partner-logo">
+            <img src="Asset/Img/Group 13.png" alt="Partner Logo 3" />
+          </div>
+          <div class="partner-logo">
+            <img src="Asset/Img/Group 13.png" alt="Partner Logo 4" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Citywide</h2>
+      <p class="by">Installations & retail activations around Bandung</p>
+      <div class="list">
+        <div class="row">
+          <div class="when">All Week</div>
+          <div class="what">Pop-Up: Textile Heritage at Asia Afrika</div><a class="action" href="#">Details</a>
+        </div>
+        <div class="row">
+          <div class="when">Thu</div>
+          <div class="what">After Hours: Rooftop Listening Session</div><a class="action" href="#">RSVP</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="in">
+        <div class="col">
+          <strong>Our Newsletter</strong>
+          <form class="newsletter">
+            <input type="email" placeholder="Your email address" required />
+            <button type="submit">Submit</button>
+          </form>
+          <p class="desc">
+            Keep on top of industry updates, designer news, coverage and upcoming announcements.
+          </p>
+        </div>
+        <div class="col">
+          <a href="mailto:info@bandungfashionweek.com">info@bandungfashionweek.com</a>
+          <a href="tel:+6281234567890">+62 812-3456-7890</a>
+          <p>Jl. Braga No. 123<br />Bandung, Indonesia</p>
+        </div>
+        <div class="col">
+          <a href="#">About Us</a>
+          <a href="#">Careers</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+      </div>
+      <div class="byline">© 2025 Bandung Fashion Week. All rights reserved.</div>
+    </footer>
+
+    <!-- BIG LOGO / WORDMARK -->
+    <section class="bigword">
+      BDGFW
+    </section>
+  </main>
+
+  <div class="dropdown-menu" id="dropdown-menu">
+    <div class="dropdown-content">
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#">BRANDS</a></li>
+          <li>
+            <a href="#"><span>&#9662;</span> APPLICATIONS</a>
+          </li>
+          <li>
+            <a href="#"><span>&#9662;</span> SUSTAINABILITY</a>
+          </li>
+          <li>
+            <a href="#"><span>&#9662;</span> CPHFW NEWTALENT</a>
+          </li>
+          <li><a href="#">NEWS</a></li>
+        </ul>
+      </nav>
+      <div class="secondary-nav">
+        <ul>
+          <li><a href="#">Image Bank</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Partners</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">YouTube</a></li>
+          <li><a href="#">Spotify</a></li>
+        </ul>
+      </div>
     </div>
-    <script src="js/main.js"></script>
-  </body>
+  </div>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
