--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
 
   <body>
     <header>
-      <div class="logo">
-        Bandung Fashion Week <span>powered by Ferry Sunarto</span>
+      <div class="header-left">
+        <div class="logo">
+          BANDUNG FASHION WEEK <span>Powered By Ferry Sunarto</span>
+        </div>
       </div>
+
       <div class="header-right">
-        <div class="event-date">AW26 / 27 – 30 January 2026</div>
         <div class="menu-button" id="menu-button">
-          <span></span>
-          <span></span>
-          <span></span>
+          <div class="hamburger-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="menu-text">Menu</div>
         </div>
       </div>
     </header>
     <div class="page-overlay" id="page-overlay"></div>
-
     <div class="hero-container">
       <h1>
         Bandung<br />
@@ -37,7 +41,6 @@
         />
       </div>
     </div>
-
     <main class="main-content">
       <section class="video-section">
         <video autoplay muted loop playsinline>
