--- a/index.html
+++ b/index.html
@@ -164,9 +164,8 @@
           <strong>Our Newsletter</strong>
           <form class="newsletter" action="https://formspree.io/f/mdklbplp" method="POST">
             <input type="email" name="email" placeholder="Your email address" required />
-
-            <input type="hidden" name="_next"
-              value="https://NAMA_USERNAME_ANDA.github.io/bandung-fashion-week/emailtemplatebfw.html">
+<input type="hidden" name="_next"
+              value="https://psyzxxy.github.io/bandung-fashion-week/emailtemplatebfw.html">
 
             <button type="submit">Submit</button>
           </form>
