--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <main class="main-content">
     <section class="video-section">
       <video autoplay muted loop playsinline>
-        <source src="Asset/Video/video4.mp4" type="video/mp4" />
+        <source src="Asset/Video/video3.webm" type="video/mp4" />
         Browser Anda tidak mendukung tag video.
       </video>
     </section>
@@ -162,11 +162,8 @@
       <div class="in">
         <div class="col">
           <strong>Our Newsletter</strong>
-          <form class="newsletter" action="https://formspree.io/f/mdklbplp" method="POST">
-            <input type="email" name="email" placeholder="Your email address" required />
-<input type="hidden" name="_next"
-              value="https://psyzxxy.github.io/bandung-fashion-week/emailtemplatebfw.html">
-
+          <form class="newsletter" id="newsletter-form">
+            <input type="email" placeholder="Your email address" required />
             <button type="submit">Submit</button>
           </form>
           <p class="desc">
