--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="main-content">
       <section class="video-section">
         <video autoplay muted loop playsinline>
-          <source src="Asset/Video/video4.mp4" type="video/mp4" />
+          <source src="Asset/Video/video3.webm" type="video/mp4" />
           Browser Anda tidak mendukung tag video.
         </video>
       </section>
@@ -90,71 +90,101 @@
         </p>
 
         <div class="mosaic">
-          <div class="mosaic-tile">
-            <video
-              id="guest-video1"
-              src="Asset/Video/video1.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video1.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video2"
-              src="Asset/Video/video3.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video3.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video3"
-              src="Asset/Video/video4.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video4.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video4"
-              src="Asset/Video/video3.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video3.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video5"
-              src="Asset/Video/video4.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video4.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
-          <div class="mosaic-tile">
-            <video
-              id="guest-video6"
-              src="Asset/Video/video1.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-              preload="metadata"
-            ></video>
+          <div class="mosaic-tile-container">
+            <div class="mosaic-tile">
+              <video
+                id="guest-video6"
+                src="Asset/Video/video1.webm"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+              ></video>
+              <div class="overlay">
+                <p>Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
